--- a/src/views/status.hbs
+++ b/src/views/status.hbs
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Home</title>
     <link rel="stylesheet" href="/style.css" />
+    <script>
+      setTimeout(function(){ window.location.reload() }, 1000)
+    </script>
   </head>
   <body>
     <h1>Status</h1>
