--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -2,11 +2,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Home</title>
+    <title>Garage Door</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <h1>My Garage</h1>
+    <h1>Garage Door Controller</h1>
     <p class="{{state.doorState}}">State: {{state.doorState}}</p>
     <ul>
       {{#each menus}}
