--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Garage</h1>
-    <p class="state {{state.doorState}}">State: {{state.doorState}}</p>
+    <p class="state {{state.doorState}}">Door: {{state.doorState}}</p>
     <ul>
       <li class="open"><a href="/open">Open</a></li>
       <li class="close"><a href="/close">Close</a></li>
